examples/ingress-resources/oidc-native/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.8.0
          args: ["start-dev", "--features=hostname:v2", "--hostname=https://keycloak.example.com", "--hostname-backchannel-dynamic=true"]
          volumeMounts:
            - name: tls-secret
              mountPath: /etc/x509/https
              readOnly: true
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 30
      volumes:
        - name: tls-secret
          secret:
            secretName: keycloak-tls-secret
